--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
 <header>
-	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+	<h1><a href=index.html>Sophie Bluel <span>Architecte d'intérieur</span></a></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
+			<li><a href=#portfolio>projets</a></li>
+			<li><a href=#contact>contact</a></li>
+			<li><a href=login.html>login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -36,6 +36,22 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<div class="filter">
+			<div class="filterCategory">
+					<div class="filterChoice">
+						<p>Tous</p>
+					</div>
+					<div class="filterChoice">
+						<p>Objets</p>						
+					</div>
+					<div class="filterChoice">
+							<p>Appartements</p>
+					</div>
+					<div class="filterChoice">
+							<p>Hôtels & restaurants </p>
+					</div>
+			</div>
+		</div>
 		<div class="gallery">
 			<figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
@@ -101,7 +117,7 @@
 <footer>
 	<nav>
 		<ul>
-			<li>Mentions Légales</li>
+			<li><a href="#">Mentions Légales</a></li>
 		</ul>
 	</nav>
 </footer>
