--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	<script type="module" src="photos.js"></script>
 </head>
 <body>
 <header>
@@ -38,21 +39,21 @@
 		<h2>Mes Projets</h2>
 		<div class="filter">
 			<div class="filterCategory">
-					<div class="filterChoice">
+					<div class="filterChoice choix1">
 						<p>Tous</p>
 					</div>
-					<div class="filterChoice">
+					<div class="filterChoice choix2">
 						<p>Objets</p>						
 					</div>
-					<div class="filterChoice">
+					<div class="filterChoice choix3">
 							<p>Appartements</p>
 					</div>
-					<div class="filterChoice">
+					<div class="filterChoice choix4">
 							<p>Hôtels & restaurants </p>
 					</div>
 			</div>
 		</div>
-		<div class="gallery">
+		<!--<div class="gallery">
 			<figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
 				<figcaption>Abajour Tahina</figcaption>
@@ -97,7 +98,10 @@
 				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
 				<figcaption>Hotel First Arte - New Delhi</figcaption>
 			</figure>
-		</div>
+		</div>-->
+	</section>
+	<section class="gallery">
+
 	</section>
 	<section id="contact">
 		<h2>Contact</h2>
@@ -121,5 +125,6 @@
 		</ul>
 	</nav>
 </footer>
+
 </body>
 </html>
