--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script type="module" src="photos.js"></script>
+	<script type="module" src="/FrontEnd/photos.js"></script>
 </head>
 <body>
 <header>
@@ -19,7 +19,7 @@
 			<li><a href=#portfolio>projets</a></li>
 			<li><a href=#contact>contact</a></li>
 			<li><a href=login.html>login</a></li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<li><a href="#"><img src="./assets/icons/instagram.png" alt="Instagram"></a></li>
 		</ul>
 	</nav>
 </header>
@@ -37,21 +37,21 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
-		<div class="filter">
+		<div class="filterCategory"><!--
 			<div class="filterCategory">
-					<div class="filterChoice choix1">
-						<p>Tous</p>
+					<div class="filterChoice choix1" data-id=0>
+						Tous
 					</div>
-					<div class="filterChoice choix2">
-						<p>Objets</p>						
+					<div class="filterChoice choix2" data-id=1>
+						Objets					
 					</div>
-					<div class="filterChoice choix3">
-							<p>Appartements</p>
+					<div class="filterChoice choix3" data-id=2>
+							Appartements
 					</div>
-					<div class="filterChoice choix4">
-							<p>Hôtels & restaurants </p>
+					<div class="filterChoice choix4" data-id=3>
+							Hôtels & restaurants 
 					</div>
-			</div>
+			</div>-->
 		</div>
 		<!--<div class="gallery">
 			<figure>
