--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -1,13 +1,15 @@
+<!DOCTYPE html>
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
-	<title>Sophie Bluel - Architecte d'intérieur</title>
+	<title>Login</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/login.css">
+	<script type="module" src="login.js"></script>
 </head>
 <body>
 <header>
@@ -17,19 +19,21 @@
 			<li><a href=.index.html/#portfolio>projets</a></li>
 			<li><a href=#contact>contact</a></li>
 			<li><a href=login.html><span>login</span></a></li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<li><a href="#"><img src="./assets/icons/instagram.png" alt="Instagram"></a></li>
 		</ul>
 	</nav>
 </header>
 <main>
 	<section id="loginform">
 		<h2>Log In</h2>
-		<form action="#" method="post">
-			<label for="name">E-mail</label>
-			<input type="email" name="email" id="email">
-			<label for="email">Mot de passe</label>
-			<input type="password" name="password" id="password">
-			<input type="submit" value="Se connecter">
+		<form method="post">
+			<div class="formulaire">
+				<label for="name">E-mail</label>
+				<input type="email" name="email" id="email" required>
+				<label for="email">Mot de passe</label>
+				<input type="password" name="password" id="password" required>
+			</div>
+			<input type="submit" value="Se connecter" id="valider">
 		</form>
         <p><a href="#">Mot de passe oublié</a></p>
 	</section>
