--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,17 +8,28 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
+	<script src="https://kit.fontawesome.com/7b1276326d.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./assets/style.css">
 	<script type="module" src="/FrontEnd/photos.js"></script>
 </head>
 <body>
+	<section class="edition postlogin">
+		<div>
+			<i class="fa-light fa-pen-to-square"></i>
+			<p>Mode édition</p>
+			<p id="changement">publier les changements</p>
+		</div>
+
+	</section>
 <header>
+	
 	<h1><a href=index.html>Sophie Bluel <span>Architecte d'intérieur</span></a></h1>
 	<nav>
 		<ul>
 			<li><a href=#portfolio>projets</a></li>
 			<li><a href=#contact>contact</a></li>
-			<li><a href=login.html>login</a></li>
+			<li id="selog"><a href=login.html>login</a></li>
+			<li id="sedelog postlogin"><a href=login.html>logout</a></li>
 			<li><a href="#"><img src="./assets/icons/instagram.png" alt="Instagram"></a></li>
 		</ul>
 	</nav>
@@ -27,6 +38,7 @@
 	<section id="introduction">
 		<figure>
 			<img src="./assets/images/sophie-bluel.png" alt="">
+			<div class="modification postlogin"><i class="fa-light fa-pen-to-square"></i>modifier</div>
 		</figure>
 		<article>
 			<h2>Designer d'espace</h2>
@@ -34,9 +46,13 @@
 			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
 			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
 		</article>
+		
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<div class="titre">
+			<h2>Mes Projets</h2>
+		<div class="modification postlogin"><i class="fa-light fa-pen-to-square"></i>modifier</div>
+		</div>
 		<div class="filterCategory"><!--
 			<div class="filterCategory">
 					<div class="filterChoice choix1" data-id=0>
