AUTHENTIFICATION FINI SAUF DISPLAY NONE POSTLOGIN

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,14 +13,14 @@
 	<script type="module" src="/FrontEnd/photos.js"></script>
 </head>
 <body>
-	<section class="edition postlogin">
+	<div class="postlogin edition ">
 		<div>
 			<i class="fa-light fa-pen-to-square"></i>
 			<p>Mode édition</p>
 			<p id="changement">publier les changements</p>
 		</div>
 
-	</section>
+	</div>
 <header>
 	
 	<h1><a href=index.html>Sophie Bluel <span>Architecte d'intérieur</span></a></h1>
@@ -29,7 +29,7 @@
 			<li><a href=#portfolio>projets</a></li>
 			<li><a href=#contact>contact</a></li>
 			<li id="selog"><a href=login.html>login</a></li>
-			<li id="sedelog postlogin"><a href=login.html>logout</a></li>
+			<li class="postlogin sedelog "><a href="#">logout</a></li>
 			<li><a href="#"><img src="./assets/icons/instagram.png" alt="Instagram"></a></li>
 		</ul>
 	</nav>
@@ -38,7 +38,7 @@
 	<section id="introduction">
 		<figure>
 			<img src="./assets/images/sophie-bluel.png" alt="">
-			<div class="modification postlogin"><i class="fa-light fa-pen-to-square"></i>modifier</div>
+			<div class="postlogin modification "><i class="fa-light fa-pen-to-square"></i>modifier</div>
 		</figure>
 		<article>
 			<h2>Designer d'espace</h2>
@@ -51,70 +51,9 @@
 	<section id="portfolio">
 		<div class="titre">
 			<h2>Mes Projets</h2>
-		<div class="modification postlogin"><i class="fa-light fa-pen-to-square"></i>modifier</div>
+		<div class="postlogin modification "><i class="fa-light fa-pen-to-square"></i>modifier</div>
 		</div>
-		<div class="filterCategory"><!--
-			<div class="filterCategory">
-					<div class="filterChoice choix1" data-id=0>
-						Tous
-					</div>
-					<div class="filterChoice choix2" data-id=1>
-						Objets					
-					</div>
-					<div class="filterChoice choix3" data-id=2>
-							Appartements
-					</div>
-					<div class="filterChoice choix4" data-id=3>
-							Hôtels & restaurants 
-					</div>
-			</div>-->
-		</div>
-		<!--<div class="gallery">
-			<figure>
-				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
-				<figcaption>Abajour Tahina</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/appartement-paris-v.png" alt="Appartement Paris V">
-				<figcaption>Appartement Paris V</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/restaurant-sushisen-londres.png" alt="Restaurant Sushisen - Londres">
-				<figcaption>Restaurant Sushisen - Londres</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/la-balisiere.png" alt="Villa “La Balisiere” - Port Louis">
-				<figcaption>Villa “La Balisiere” - Port Louis</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/structures-thermopolis.png" alt="Structures Thermopolis">
-				<figcaption>Structures Thermopolis</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/appartement-paris-x.png" alt="Appartement Paris X">
-				<figcaption>Appartement Paris X</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/le-coteau-cassis.png" alt="Pavillon “Le coteau” - Cassis">
-				<figcaption>Pavillon “Le coteau” - Cassis</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/villa-ferneze.png" alt="Villa Ferneze - Isola d’Elba">
-				<figcaption>Villa Ferneze - Isola d’Elba</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/appartement-paris-xviii.png" alt="Appartement Paris XVIII">
-				<figcaption>Appartement Paris XVIII</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/bar-lullaby-paris.png" alt="Bar “Lullaby” - Paris">
-				<figcaption>Bar “Lullaby” - Paris</figcaption>
-			</figure>
-			<figure>
-				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
-				<figcaption>Hotel First Arte - New Delhi</figcaption>
-			</figure>
-		</div>-->
+		<div class="filterCategory">
 	</section>
 	<section class="gallery">
 
