--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -33,7 +33,7 @@
 				<label for="email">Mot de passe</label>
 				<input type="myPassword" name="myPassword" id="myPassword" required>
 			</div>
-			<input type="submit" name="se connecter" id="valider">
+			<input type="submit" name="se connecter" id="valider" value="Se connecter">
 		</form>
         <p><a href="#">Mot de passe oublié</a></p>
 	</section>
