FILTRE FINI MANQUE LE DISPLAY NONE DES POSTLOGIN

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,12 +13,12 @@
 	<script type="module" src="/FrontEnd/photos.js"></script>
 </head>
 <body>
-	<div class="postlogin edition ">
+	<section class="postlogin edition ">
 		<div>
 			<i class="fa-light fa-pen-to-square"></i>
 			<p>Mode édition</p>
 			<p id="changement">publier les changements</p>
-		</div>
+		</section>
 
 	</div>
 <header>
