--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -63,7 +63,7 @@
 
 							</section>
 							<form action="" method="post">
-								<input type="text" name="Ajouter une photo" id="validerModale" value="Ajouter une photo">
+								<input type="submit" name="Ajouter une photo" id="validerModale" value="Ajouter une photo">
 							</form>
 							<p class="closeAll"><a href="#">Supprimer la galerie</a></p>
 						</div>
@@ -79,12 +79,16 @@
 							</div>
 							<div class="contenuModal">
 								<h2>Ajout photo</h2>
-								<div class="aj-photo">
-									<i class="fa-sharp fa-regular fa-image"></i>
-									<h3 class="ajouter-photo"> + Ajouter photo</h3>
-									<p>jpg, png : 4mo max</p>
-								</div>
-								<form action="#" method="get">
+								<div class="form1">
+									<form action="#" method="get"></form>
+									<div class="aj-photo">
+										<i class="fa-sharp fa-regular fa-image"></i>
+										<label for="ajouter-photo" class="filePhoto">+ Ajouter photo</label>
+										<input type="file" name="ajouter-photo" id="ajouter-photo" accept=".jpg, .jpeg, .png">
+										<p>jpg, png : 4mo max</p>
+									</div>
+								
+								
 									<div class="formulaire" id="formulaire">
 										<label for="titre">Titre</label>
 										<input type="text" name="titre" id="titre" required>
@@ -96,8 +100,9 @@
 											<option value="Hôtels & restaurants" id="3">Hôtels & restaurants</option>
 										</select>
 									</div>
-									<input type="text" name="Valider" id="valider" value="Valider">
+									<input type="submit" name="Valider" id="valider" value="Valider">
 								</form>
+							</div>
 							</div>
 						</div>
 					</div>
