Ajout photo site

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -28,10 +28,10 @@
 		<h2>Log In</h2>
 		<form action="http://localhost:5678/api/users/login" method="post">
 			<div class="formulaire" id="formulaire">
-				<label for="name">E-mail</label>
-				<input type="email" name="email" id="email" required>
-				<label for="email">Mot de passe</label>
-				<input type="myPassword" name="myPassword" id="myPassword" required>
+				<label for="email">E-mail</label>
+				<input type="email" name="email" id="email" required="Champ obligatoire">
+				<label for="myPassword">Mot de passe</label>
+				<input type="myPassword" name="myPassword" id="myPassword" required="Champ obligatoire">
 			</div>
 			<input type="submit" name="se connecter" id="valider" value="Se connecter">
 		</form>
