--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -80,7 +80,7 @@
 							<div class="contenuModal">
 								<h2>Ajout photo</h2>
 								<div class="form1">
-									<form action="#" method="get"></form>
+									<form id="addPhotos" action="#" method="post" enctype="multipart/form-data">
 									<div class="aj-photo">
 										
 										<i class="fa-sharp fa-regular fa-image"></i>
@@ -97,12 +97,12 @@
 										<label for="categorie">Catégorie</label>
 										<select name="categorie" id="categorie">
 											<option value="Sélectionner une catégorie" id="0"></option>
-											<option value="Objets" id="1">Objets</option>
-											<option value="Appartements" id="2">Appartements</option>
-											<option value="Hôtels & restaurants" id="3">Hôtels & restaurants</option>
+											<option value="1" >Objets</option>
+											<option value="2" >Appartements</option>
+											<option value="3" >Hôtels & restaurants</option>
 										</select>
 									</div>
-									<input type="submit" name="Valider" id="valider" value="Valider">
+									<button name="Valider" id="formValider">Valider</button>
 								</form>
 							</div>
 							</div>
