--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -102,7 +102,7 @@
 											<option value="3" >Hôtels & restaurants</option>
 										</select>
 									</div>
-									<button name="Valider" id="formValider">Valider</button>
+									<input type="submit" name="Valider" value="Valider" id="formValider">
 								</form>
 							</div>
 							</div>
