BUG AJOUT PHOTO API

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -86,7 +86,7 @@
 										<i class="fa-sharp fa-regular fa-image"></i>
 										<label for="ajouter-photo" class="filePhoto"><img class="nvPhoto" src=""/>+ Ajouter photo</label>
 										
-										<input type="file" name="ajouter-photo" id="ajouter-photo" accept=".jpg, .jpeg, .png">
+										<input type="file" name="img" id="ajouter-photo" accept=".jpg, .jpeg, .png">
 										<p>jpg, png : 4mo max</p>
 									</div>
 								
