--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -26,7 +26,7 @@
 <main>
 	<section id="loginform">
 		<h2>Log In</h2>
-		<form action="http://localhost:5678/api/users/login" method="post">
+		<form class="loginform1" action="http://localhost:5678/api/users/login" method="post">
 			<div class="formulaire" id="formulaire">
 				<label for="email">E-mail</label>
 				<input type="email" name="email" id="email" required="Champ obligatoire">
