--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -93,10 +93,10 @@
 								
 									<div class="formulaire" id="formulaire">
 										<label for="titre">Titre</label>
-										<input type="text" name="title" id="titre" required="champ obligatoire">
+										<input type="text" name="title" id="titre" required>
 										<label for="categorie">Catégorie</label>
-										<select name="category" id="categorie">
-											<option value="Sélectionner une catégorie" id="0"></option>
+										<select name="category" id="categorie" required>
+											<option value="" selected disabled></option>
 											<option value="1" >Objets</option>
 											<option value="2" >Appartements</option>
 											<option value="3" >Hôtels & restaurants</option>
