--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -29,9 +29,9 @@
 		<form class="loginform1" action="http://localhost:5678/api/users/login" method="post">
 			<div class="formulaire" id="formulaire">
 				<label for="email">E-mail</label>
-				<input type="email" name="email" id="email" required="Champ obligatoire">
+				<input type="email" name="email" id="email" required>
 				<label for="myPassword">Mot de passe</label>
-				<input type="myPassword" name="myPassword" id="myPassword" required="Champ obligatoire">
+				<input type="Password" name="myPassword" id="myPassword" required>
 			</div>
 			<input type="submit" name="se connecter" id="valider" value="Se connecter">
 		</form>
