--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -94,7 +94,7 @@
 										<label for="titre">Titre</label>
 										<input type="text" name="title" id="titre" required>
 										<label for="category">Catégorie</label>
-										<select name="category" id="category" required>
+										<select name="category" id="categorie" required>
 											<option value="" selected disabled></option>
 											<option value="1" >Objets</option>
 											<option value="2" >Appartements</option>
